--- a/views/desktop/doc.head.htm
+++ b/views/desktop/doc.head.htm
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <meta content-language="es" />
 <title><!-- IF PAGE_TITLE != '' -->{PAGE_TITLE} &raquo; <!-- ENDIF -->{SITE_TITLE}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" type="text/css" href="{S_SERVER}ext/default.css"/>
 <link rel="alternate" type="application/rss+xml" href="{U_FEED}" title="{L_FEED_TITLE}"/>
@@ -14,6 +15,32 @@
 
 <script src="{S_SERVER}ext/lib.js" />
 <script src="{S_SERVER}ext/bio.js" />
+<style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
 </head>
 
-<body id="home">
+<body>
+	
+	<div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">{SITE_TITLE}</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Inicio</a></li>
+              <li><a href="#about">Comunidad</a></li>
+              <li><a href="#contact">Contacto</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
