--- a/views/desktop/home.htm
+++ b/views/desktop/home.htm
@@ -1,51 +1,57 @@
 <!-- INCLUDE doc.body.htm -->
-<script>
-_.config.store('u_home', '{U_HOME}');
-</script>
 
-<!-- BEGIN status_post -->
-<section class="main status">
-<form action="{U_HOME_STATUS:UPDATE}" method="post">
-	
-	<h1>{L_STATUS_LEGEND}</h1>
-	<textarea name="status" class="area"></textarea>
-	<input name="submit" type="submit" class="post" value="{L_SEND}" />
-	
-</form>
-</section>
-<!-- END status_post -->
+ <div class="container">
 
-<!-- BEGIN birthday -->
-<section class="main">
-	<h1>{L_TODAY_BIRTHDAY}</h1>
-	<ul>
-	<!-- BEGIN row -->
-	<li><a href="{row.A}">{row.NAME}</a> {row.AVATAR}</li>
-	<!-- END row -->
-	</ul>
-</section>
-<!-- END birthday -->
+      <!-- Main hero unit for a primary marketing message or call to action -->
+      <div class="hero-unit">
+        <h1>&iexcl;&iexcl;S&Uacute;MATE!!</h1>
+        <p>Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un empresario!</p>
+        <p><a class="btn btn-primary btn-large" href="{U_SIGNIN}">Aprende M&aacute;s &raquo;</a></p>
+      </div>
 
-<!-- BEGIN board_topics -->
-<section class="main">
-	<h1>{L_TOPICS_SHINE}</h1>
-	<ul>
-	<!-- BEGIN row -->
-	<li><a<!-- IF row.TOPIC_CLASS != '' --> class="t_{row.TOPIC_CLASS}"<!-- ENDIF --> href="{row.A}">{row.TOPIC_TITLE}</a></li>
-	<!-- END row -->
-	</ul>
-</section>
-<!-- END board_topics -->
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="span4">
+          <h2>Capacitate</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+        </div>
+        <div class="span4">
+          <h2>Informate</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+       </div>
+        <div class="span4">
+          <h2>Asesorate</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="span4">
+          <h2>Integrate</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+        </div>
+        <div class="span4">
+          <h2>Educate</h2>
+           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+       </div>
+        <div class="span4">
+          <h2>Empleate</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn" href="#">Ver detalles &raquo;</a></p>
+        </div>
+      </div>
 
-<!-- BEGIN friend_request -->
-<section class="secondary">
-	<h1>{L_FRIEND_REQUESTS}</h1>
-	<ul id="friend_request">
-	<!-- BEGIN row -->
-	<li><a href="{row.A}">{row.BIO_NAME}</a> <a class="approve" href="{row.U_APPROVE}">{L_APPROVE}</a> <a class="deny" href="{row.U_DENY}">{L_DENY}</a></li>
-	<!-- END row -->
-	</ul>
-</section>
-<!-- END friend_request -->
+      <hr>
+
+      <footer>
+        <p>&copy; Ideas y Oportunidades 2012</p>
+      </footer>
+
+    </div> <!-- /container -->
 
 <!-- INCLUDE doc.foot.htm -->
