--- a/views/desktop/doc.head.htm
+++ b/views/desktop/doc.head.htm
@@ -15,6 +15,11 @@
 
 <script src="{S_SERVER}ext/lib.js" />
 <script src="{S_SERVER}ext/bio.js" />
+
+<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
 <style type="text/css">
       body {
         padding-top: 60px;
@@ -33,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">{SITE_TITLE}</a>
+          <a class="brand" href="./index.html">{SITE_TITLE}</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Inicio</a></li>
