--- a/views/desktop/css/default.css
+++ b/views/desktop/css/default.css
@@ -2,3 +2,8 @@
 <!-- INCLUDE css/bootstrap.css -->
 <!-- INCLUDE css/bootstrap-responsive.css -->
 <!-- INCLUDE css/docs.css -->
+
+body {
+	padding-top: 60px;
+	padding-bottom: 40px;
+}
