--- a/views/desktop/doc.head.htm
+++ b/views/desktop/doc.head.htm
@@ -19,33 +19,26 @@
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-
-<style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
 </head>
 
 <body>
-	
 	<div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="./index.html">{SITE_TITLE}</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Inicio</a></li>
-              <li><a href="#about">Comunidad</a></li>
-              <li><a href="#contact">Contacto</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a>
+				<a class="brand" href="./index.html">{SITE_TITLE}</a>
+				<div class="nav-collapse">
+					<ul class="nav">
+						<li class="active"><a href="{U_HOME}">Inicio</a></li>
+						<li><a href="{U_BOARD}">{L_BOARD}</a></li>
+						<li><a href="#about">Comunidad</a></li>
+						<li><a href="#contact">Contacto</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
