--- a/views/desktop/doc.foot.htm
+++ b/views/desktop/doc.foot.htm
@@ -1,4 +1,6 @@
 
+</div>
+
 <!-- IF G_ANALYTICS -->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
