--- a/views/desktop/home.htm
+++ b/views/desktop/home.htm
@@ -1,9 +1,17 @@
 <!-- INCLUDE doc.body.htm -->
 
-<div class="hero-unit">
-	<h1>&iexcl;&iexcl;S&Uacute;MATE!!</h1>
-	<p>Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un empresario!</p>
-	<p><a class="btn btn-primary btn-large" href="{U_SIGNIN}">Aprende M&aacute;s &raquo;</a></p>
+<div class="row">
+	<div class="span3 hide-text">
+		<div class="io-small">Ideas y Oportunidades</div>
+	</div>
+	
+	<div class="span9">
+		<div class="hero-unit">
+			<h1>&iexcl;&iexcl;S&Uacute;MATE!!</h1>
+			<p>Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un empresario!</p>
+			<p><a class="btn btn-warning btn-large" href="{U_SIGNIN}">Aprende M&aacute;s &raquo;</a></p>
+		</div>
+	</div>
 </div>
 
 <div class="row">
