--- a/views/desktop/home.htm
+++ b/views/desktop/home.htm
@@ -1,11 +1,7 @@
 <!-- INCLUDE doc.body.htm -->
 
 <div class="row">
-	<div class="span3 hide-text">
-		<div class="io-small">Ideas y Oportunidades</div>
-	</div>
-	
-	<div class="span9">
+	<div class="span9 offset3">
 		<div class="hero-unit">
 			<h1>&iexcl;&iexcl;S&Uacute;MATE!!</h1>
 			<p>Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un empresario!</p>
@@ -14,45 +10,49 @@
 	</div>
 </div>
 
-<div class="row">
-	<div class="span4">
+<ul class="thumbnails">
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Capacitate</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
+		<p><img src="http://reformrevolution.com/wp-content/uploads/cities-iv-04.jpg" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
 	
-	<div class="span4">
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Informate</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
+		<p><img src="http://reformrevolution.com/wp-content/uploads/goab_rr.jpg" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
 	
-	<div class="span4">
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Asesorate</h2>
-		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span4">
+		<p><img src="http://reformrevolution.com/wp-content/uploads/700x437_chapel_street_03.jpg" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
+	
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Integrate</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
+		<p><img src="http://reformrevolution.com/wp-content/uploads/cargocollective.png" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
 	
-	<div class="span4">
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Educate</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
+		<p><img src="http://reformrevolution.com/wp-content/uploads/superhumanoids-1.jpeg" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
 	
-	<div class="span4">
+	<li class="span2">
+		<a class="btn" href="#">
 		<h2>Empleate</h2>
-		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		<p><a class="btn" href="#">Ver detalles &raquo;</a></p>
-	</div>
-</div>
+		<p><img src="http://reformrevolution.com/wp-content/uploads/chase_all_14_1100.jpg" style="width: 175px; height: 100px;" alt="" /></p>
+		</a>
+	</li>
+</ul>
 
 <hr>
 
