--- a/views/desktop/css/default.css
+++ b/views/desktop/css/default.css
@@ -4,7 +4,7 @@
 <!-- INCLUDE css/docs.css -->
 
 body {
-	padding-top: 60px;
+	padding-top: 10px;
 	padding-bottom: 40px;
 }
 
@@ -24,4 +24,25 @@ body {
 
 .centered {
 	text-align: center;
+}
+
+.ttv a {
+	height: 145px;
+	text-align: center;
+}
+
+.ttv a h5 {
+	color: #e35702;
+}
+
+.nav-menu {
+	list-style: none;
+	margin: 50px 0;
+	padding: 0;
+	border: 0;
+}
+
+.nav-menu li {
+	float: left;
+	margin-right: 8px;
 }
