--- a/views/desktop/sign.htm
+++ b/views/desktop/sign.htm
@@ -18,16 +18,16 @@
 			<legend>&iquest;Ya tienes tu usuario?</legend>
 			
 			<div class="control-group">
-				<label class="control-label" for="username">{L_EMAIL}</label>
+				<label class="control-label" for="address">{L_EMAIL}</label>
 				<div class="controls">
-					<input class="input-medium" id="username" name="username" type="text" value="">
+					<input class="input-medium" id="address" name="address" type="text" value="">
 				</div>
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">{L_PASSWORD}</label>
+				<label class="control-label" for="key">{L_PASSWORD}</label>
 				<div class="controls">
-					<input class="input-medium" id="password" name="password" type="password" value="">
+					<input class="input-medium" id="key" name="key" type="password" value="">
 				</div>
 			</div>
 			
