--- a/views/desktop/css/default.css
+++ b/views/desktop/css/default.css
@@ -37,12 +37,31 @@ body {
 
 .nav-menu {
 	list-style: none;
-	margin: 50px 0;
+	margin: 40px 0;
 	padding: 0;
 	border: 0;
+	display: block;
+}
+
+.login-top {
+	margin-top: 30px;
 }
 
 .nav-menu li {
 	float: left;
 	margin-right: 8px;
+}
+
+.round {
+	/*border: 1px solid #eee;*/
+	border-radius: 100px;
+}
+
+.nav-menu-left {
+/*	margin-left: 300px;*/
+}
+
+.radial {
+	border-radius: 50px;
+	
 }
